kubernetes/apps/network/adguard/app/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: network
  labels:
    app: adguard
  annotations:
    lbipam.cilium.io/ips: "192.168.178.144"
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Cluster
